# classes

./: .fortls  .gitignore  CMakeLists.txt  FORDsetup.md  LICENSE.gpl3.md  README.md  build.py  build.sh  classes.code-workspace  easifemClasses.code-workspace  fortitude.toml  install.py  package-lock.json  package.py  release_install.py
Workspaces/: AbstractKernel.code-workspace  AbstractPolynomial.code-workspace  Domain.code-workspace  FE.code-workspace  GmshAPI.code-workspace  Linsolver.code-workspace  Monomial.code-workspace  OrthogonalPolynomial1D.code-workspace  bc.code-workspace  fields.code-workspace  file.code-workspace  hdf5.code-workspace  mesh-field.code-workspace  mesh.code-workspace  msh4.code-workspace  scalarField.code-workspace  test.code-workspace  vector.code-workspace  xml.code-workspace
cmake/: Compiler.cmake  Config.cmake.in  addARPACK.cmake  addFFTW.cmake  addGTKFortran.cmake  addGmsh.cmake  addLIS.cmake  addMetis.cmake  addOpenMP.cmake  addPLPLOT.cmake  install.cmake  packaging.cmake  prefixPaths.cmake  targetCompileDefs.cmake  targetIncludeDirs.cmake  targetLinkLibs.cmake  targetProperties.cmake
cmake/Modules/: FindGmsh.cmake
docs/: index.html  search.html
docs/interface/: abc_addsurrogate.html  abc_checkessentialparam.html  abc_deallocatedata.html  abc_display.html  abc_export.html  abc_import.html  abc_initiate.html  addsurrogate.html  addsurrogate_dirichletbc.html  addsurrogate_domain.html  addsurrogate_mesh.html  afield_addsurrogate.html  afield_checkessentialparam.html  afield_deallocatedata.html  afield_display.html  afield_export.html  afield_import.html  afield_initiate1.html  afield_initiate2.html  afile_addsurrogate.html  afile_close.html  afile_deallocatedata.html  afile_delete.html  afile_getfileext.html  afile_getfilename.html  afile_getfileparts.html  afile_getfilepath.html  afile_iseof.html  afile_isopen.html  afile_isread.html  afile_iswrite.html  afile_open.html  afile_seteofstat.html  afile_setfileext.html  afile_setfilename.html  afile_setfilepath.html  afile_setopenstat.html  afile_setreadstat.html  afile_setwritestat.html  als_addsurrogate.html  (+1370 more)
docs/lists/: absint.html  files.html  modules.html  procedures.html  types.html
docs/module/: abstractbc_class.html  abstractelementfield_class.html  abstractfield_class.html  abstractfile_class.html  abstractlinsolver_class.html  abstractmatrixfield_class.html  abstractnodefield_class.html  abstractvector_class.html  blocknodefield_class.html  blockscalarfield_class.html  dirichletbc_class.html  distributedvector_class.html  domain_class.html  domain_class~2.html  easifem.html  easifemclasses.html  element_class.html  elementfactory.html  elementlist_classs.html  elementpointervector_class.html  exceptionhandler_class.html  facetelement_class.html  field.html  fieldfactory.html  files.html  filetype_checkpoint.html  filetype_da32.html  filetype_log.html  filetype_xml.html  fortranfile_class.html  fpl_method.html  gmsh_class.html  gmshfltk_class.html  gmshgraphics_class.html  gmshinterface.html  gmshmodel_class.html  gmshmodelgeo_class.html  gmshmodelgeomesh_class.html  gmshmodelmesh_class.html  (+40 more)
pages/: DistributedVector.md  Domain.md  Element.md  LinSolver.md  MatrixField.md  Mesh.md  MeshData.md  STScalarField.md  STVectorField.md  ScalarField.md  Vector.md  VectorField.md
setup/: install_pkgs_Ubuntu.sh
src/: easifemClasses.code-workspace
src/modules/BinaryTree/test/: CMakeLists.txt  IntBinaryTree_test_1.F90  IntBinaryTree_test_2.F90  IntBinaryTree_test_3.F90  IntBinaryTree_test_4.F90  IntBinaryTree_test_5.F90  _Delete_test_1.F90  _Delete_test_2.F90  _Delete_test_3.F90  _GetMax_test_1.F90  _GetMin_test_1.F90  _GetNode_test_1.F90  _GetPredecessor_test_1.F90  _GetSuccessor_test_1.F90  _Insert_test_1.F90  _Remove_test_2.F90  _Remove_test_3.F90  _Remove_test_4.F90  test.txt
src/modules/BinaryTree/test/EdgeBinaryTree/: CMakeLists.txt  test.txt  test_1.F90  test_2.F90  test_3.F90  test_4.F90
tests/: CMakeLists.txt
tests/testMeshPointerVector/: CMakeLists.txt  mesh.h5  test_MeshPointerVector.f90
(+3346 files in other folders)
